# fprintd

./: .gitlab-ci.yml  meson.build  meson_options.txt
data/: pam_fprintd.8
doc/dbus/: meson.build
pam/: meson.build  pam_fprintd.c
src/: main.c  meson.build
tests/: fprintd.py
